Deleted unneccessary xmls

--- a/UniSellApplication/app/src/main/res/layout/fragment_create_listing.xml
+++ b/UniSellApplication/app/src/main/res/layout/fragment_create_listing.xml
@@ -84,7 +84,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="1dp"
-        android:text="Price $"
+        android:text="Price"
         android:textColor="@color/blue_2767"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -97,7 +97,7 @@
         android:layout_height="40dp"
         android:background="@drawable/edittext_background"
         android:ems="10"
-        android:hint="  0.00"
+        android:hint="  $0.00"
         android:inputType="textMultiLine"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
