welcome page and icon

--- a/UniSellApplication/app/src/main/res/layout/welcome_page.xml
+++ b/UniSellApplication/app/src/main/res/layout/welcome_page.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/candal"
+        android:textStyle="bold"
         android:text="Welcome to"
         android:textColor="@color/blue_2767"
         android:textSize="30sp"
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/candal"
+        android:textStyle="bold"
         android:text="UniSell"
         android:textColor="@color/blue_2767"
         android:textSize="30sp"
@@ -70,6 +72,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Login"
+                android:textStyle="bold"
                 android:textColor="@color/red_186"
                 android:fontFamily="@font/candal"
                 android:textSize="22sp" />
@@ -94,6 +97,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="6dp"
                 android:text="Registration"
+                android:textStyle="bold"
                 android:textColor="@color/red_186"
                 android:fontFamily="@font/candal"
                 android:textSize="22sp" />
@@ -108,7 +112,7 @@
         android:text="Resources for Fresno State Students. We are a platform where you can find your school necessities!"
         android:textAlignment="center"
         android:textColor="@color/blue_2767"
-        android:textSize="11sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
