--- a/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/UniSellApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,7 @@
             android:title="@string/profile" />
         <item
             android:id="@+id/nav_category"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/tags"
             android:title="@string/category" />
         <item
             android:id="@+id/nav_make_listing"
